main section, search section layout

--- a/assets/style.css
+++ b/assets/style.css
@@ -1,5 +1,8 @@
 /*----------Layout-------------*/
-
+body {
+  background-color: white;
+  font-family: quicksand, sans-serif;
+}
 /*----------Navigation-------------*/
 .nav {
   position: sticky;
