--- a/assets/style.css
+++ b/assets/style.css
@@ -11,10 +11,25 @@ body {
 }
 
 .navbar-brand {
-  padding-left: 20px;
+  padding-left: 5px;
 }
-/*----------Lyrics-------------*/
+/*----------Jumbotron-------------*/
 
+/*----------Lyrics-------------*/
+main {
+  background-color: #000;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  padding: 131px 0;
+  position: relative;
+  background-image: url("../assets/img/bg.png");
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-position: center;
+  height: 100%;
+}
 /*----------Display Lyrics-------------*/
 
 /*----------Search Bar-------------*/
