--- a/assets/style.css
+++ b/assets/style.css
@@ -30,7 +30,6 @@ main {
   background-position: center;
   height: 100%;
 }
-/*----------Display Lyrics-------------*/
 
 /*----------Search Bar-------------*/
 #form input {
@@ -63,4 +62,44 @@ input:focus,
 button:focus {
   outline: none;
 }
-/*----------Button Styles-------------*/
+/*----------Results Styles-------------*/
+.container {
+  margin: 30px auto;
+  max-width: 100%;
+  width: 500px;
+}
+
+.container h2 {
+  font-weight: 300;
+}
+
+.container p {
+  text-align: center;
+}
+
+.centered {
+  display: flex;
+  justify-content: center;
+}
+
+.centered button {
+  transform: scale(1.3);
+  margin: 15px;
+}
+
+/*----------Highlight Lyrics-------------*/
+span.lead:hover {
+  background-color: rgb(244, 188, 68);
+}
+
+/*----------Display Lyrics-------------*/
+ul.songs {
+    list-style-type: none;
+    padding: 0;
+  }
+  
+  ul.songs li {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    margin: 10px 0;
