--- a/assets/style.css
+++ b/assets/style.css
@@ -13,11 +13,20 @@ body {
 .navbar-brand {
   padding-left: 5px;
 }
-/*----------Button-------------*/
+/*----------Buttons-------------*/
 .bmbtn {
   background-color: #ff66c4;
   border: 0;
   border-radius: 33px;
+  color: #fff;
+  padding: 4px 10px;
+}
+
+/*----------Get Lyric Button-------------*/
+.btn {
+  background-color: rgb(244, 188, 68);
+  border: 0;
+  border-radius: 10px;
   color: #fff;
   padding: 4px 10px;
 }
@@ -102,6 +111,10 @@ button:focus {
 .centered button {
   transform: scale(1.3);
   margin: 15px;
+}
+
+#lyrics * {
+  z-index: 1;
 }
 
 /*----------Highlight Lyrics-------------*/
