--- a/assets/style.css
+++ b/assets/style.css
@@ -2,7 +2,7 @@
 
 /*----------Layout-------------*/
 body {
-  background-color: white;
+  background-color: #f8f9fa;
   font-family: quicksand, sans-serif;
 }
 /*----------Navigation-------------*/
