--- a/assets/style.css
+++ b/assets/style.css
@@ -1,28 +1,28 @@
 @import url("https://fonts.googleapis.com/css2?family=Quicksand:wght@400;700&display=swap");
 
-/*----------Layout-------------*/
+/* Layout */
 body {
   background-color: #f8f9fa;
   font-family: quicksand, sans-serif;
 }
-/*----------Navigation-------------*/
+
+/* Navigation */
 .nav {
   position: sticky;
 }
-
 .navbar-brand {
   padding-left: 5px;
 }
-/*----------Buttons-------------*/
-.bmbtn {
-  background-color: #ff66c4;
-  border: 0;
-  border-radius: 33px;
-  color: #fff;
-  padding: 4px 10px;
+
+/* Buttons */
+button {
+  cursor: pointer;
+}
+button:active {
+  transform: scale(0.95);
 }
 
-/*----------Get Lyric Button-------------*/
+/* Get Lyric Button */
 .btn {
   background-color: rgb(244, 188, 68);
   border: 0;
@@ -31,17 +31,18 @@ body {
   padding: 4px 10px;
 }
 
-button {
-  cursor: pointer;
-}
-
-button:active {
-  transform: scale(0.95);
+/* Explore Button */
+.bmbtn {
+  background-color: #ff66c4;
+  border: 0;
+  border-radius: 33px;
+  color: #fff;
+  padding: 4px 10px;
 }
 
 /*----------Jumbotron has no style like me in 6th grade-------------*/
 
-/*----------Lyrics-------------*/
+/* Main App/Search Section */
 main {
   background-color: #000;
   display: flex;
@@ -57,18 +58,18 @@ main {
   height: 100%;
 }
 
-/*----------Search Bar-------------*/
+/* Search Bar */
 #form input {
   margin: 4px 2px;
   padding: 10px 20px;
-  border-width: 0;
+  border: none;
   border-radius: 33px;
-  border-color: black;
   text-indent: 10px;
   display: inline-flex;
   width: 70%;
 }
 
+/* Search Submit Button */
 #searchButton {
   margin: 4px 2px;
   padding: 10px 20px;
@@ -80,7 +81,6 @@ main {
   text-decoration: none;
   cursor: pointer;
 }
-
 #searchbutton:active {
   transform: scale(0.95);
 }
@@ -88,46 +88,39 @@ input:focus,
 button:focus {
   outline: none;
 }
-/*----------Results Styles-------------*/
+
+/* Results Section Layout */
 .container {
   margin: 30px auto;
   max-width: 100%;
   width: 500px;
 }
-
 .container h2 {
   font-weight: 300;
 }
-
 .container p {
   text-align: center;
 }
-
 .centered {
   display: flex;
   justify-content: center;
 }
-
 .centered button {
   transform: scale(1.3);
   margin: 15px;
 }
-
 #lyrics * {
-  z-index: 1;
+  z-index: 1; /* Make Sure On Top */
 }
 
-/*----------Highlight Lyrics-------------*/
+/* Result Styles */
 span.lead:hover {
-  background-color: rgb(244, 188, 68);
+  background-color: rgb(244, 188, 68); /* Highlights Lyrics */
 }
-
-/*----------Display Lyrics-------------*/
 ul.songs {
-  list-style-type: none;
+  list-style-type: none; /* Display as list */
   padding: 0;
 }
-
 ul.songs li {
   display: flex;
   align-items: center;
